@startuml
' After Refactoring Diagram

class AppDelegate
class UILogic
class Gate

class GameFacade {
  + startGame()
  + loadGame()
  + changeScene()
  + showUI()
}

class SceneManager {
  + changeMap()
  + goToFarmScene()
}

class UIManager {
  + showUILayer()
  + hideUILayer()
}

class DocumentManager {
  + load()
}

class TimeManager {
  + goToNextDay()
}

note "Clients are decoupled from the subsystems. \n They only interact with the Facade." as N1

AppDelegate --> GameFacade
UILogic --> GameFacade
Gate --> GameFacade

GameFacade o--> SceneManager
GameFacade o--> UIManager
GameFacade o--> DocumentManager
GameFacade o--> TimeManager

N1 .[hidden]. UILogic

@enduml
